<resources>
<string name="about">About FCC Speed Test</string>
<string name="about_browsing">Visiting a web page is one of the most common tasks people perform on the Internet. This test emulates that process and shows the average time in seconds of how long a selection of popular web sites took to load. Note that results may vary according to changes in the websites being visited. Times are recorded in seconds (lower is better).</string>
<string name="about_download">This should be indicative of the maximum speed your broadband connection will be able to download data from the Internet.  Results are recorded in Mbps (higher is better).</string>
<string name="about_jitter">Jitter is............</string>
<string name="about_latency">This test measures how long it takes one packet to be sent to one of our test servers, and then returned back to you.  Latency can be thought of as the responsiveness of the connection from your device and our servers on the Internet. Times are recorded here in milliseconds (lower is better).</string>
<string name="about_packet_loss">Packet loss occurs when the information sent by your device fails to reach its destination. When packet loss is high, you may find that time sensitive applications such as Voice over IP (VoIP) and online gaming will suffer. Packet loss is recorded here as a percentage (lower is better).</string>
<string name="about_text">This app runs in the background, measuring your mobile provider\'s network performance whilst you are not using your device. You can view results by pressing the Test Results button.  Measurement results are transmitted back to Samknows for use in their projects with telecoms regulators worldwide.\n\nThe application has been optimised for efficient network usage, however it might be still too high for your data plan. If that\'s the case you may configure a monthly data cap in settings menu accessible via the Menu key.\n\nFor support or queries please contact us at community@samknows.com </string>
<string name="about_upload">This should be indicative of the maximum speed your broadband connection will be able to transmit data to the Internet.  Results are recorded in Mbps (higher is better).</string>
<string name="accept_terms">Please tick checkbox to confirm Terms and Conditions</string>
<string name="account_question">Don\'t have an account?</string>
<string name="accuracy">Accuracy</string>
<string name="activated">Activated</string>
<string name="activating">Activating</string>
<string name="activating_complete">Activating complete</string>
<string name="activation">Refresh config</string>
<string name="activation_menu_string">Activation</string>
<string name="activation_needed">The application needs to be activated</string>
<string name="active_connection">Active Connection: </string>
<string name="active_metrics_mobile">Active Metrics (Mobile)</string>
<string name="active_metrics_wifi">Active Metrics (WiFi)</string>
<string name="active_network_type">Active network type</string>
<string name="active_network_type_title">Active Network Type</string>
<string name="activity_info_name">System Info</string>
<string name="activity_initial_settings_name">Data Cap</string>
<string name="activity_logs_name">SamKnows Logs</string>
<string name="activity_pref_name">Settings</string>
<string name="activity_run_test_name">SamKnows Test Executor</string>
<string name="activity_test_results_name">Test Results</string>
<string name="agree">I Agree</string>
<string name="alert_icon">Alert Icon</string>
<string name="all">All</string>
<string name="already_have_account">Already have an account?</string>
<string name="app_name">FCC Speed Test</string>
<string name="archive_result">Archived Result</string>
<string name="archive_result_of"> of </string>
<string name="area_code">Area Code</string>
<string name="auto_testing">Auto Testing</string>
<string name="available_tests">Available Tests</string>
<string name="average">Average</string>
<string name="average_results">Average Results</string>
<string name="bearer">Bearer</string>
<string name="best_server">Best server</string>
<string name="best_time">Best time</string>
<string name="bluetooth">bluetooth</string>
<string name="browsing">Browsing</string>
<string name="cancel">Cancel</string>
<string name="cancel_test_question">Do you want to cancel running test?</string>
<string name="cant_run_test">Please wait for closest target test to finish.</string>
<string name="cdma">CDMA</string>
<string name="cdmaecio">CDMA ECIO</string>
<string name="cdma_base_station_id">CDMA base station ID</string>
<string name="cdma_base_station_latitude">cmda base station latitude</string>
<string name="cdma_base_station_longitude">CDMA base station longitude</string>
<string name="cdma_base_station_strength">CDMA base station strength</string>
<string name="cdma_network_id">CDMA network ID</string>
<string name="cdma_system_id">CDMA system ID</string>
<string name="cell_id">Cell ID</string>
<string name="cell_tower_area_location_code">Cell Tower Area Location Code</string>
<string name="cell_tower_id">Cell Tower ID</string>
<string name="cell_tower_info">Current Cell Tower</string>
<string name="choose_test">Choose Test</string>
<string name="choose_time">Choose Time Period</string>
<string name="close">Close</string>
<string name="close_panel">Close Panel</string>
<string name="cmda_base_station_latitude">CDMA base station latitude</string>
<string name="completed">Completed</string>
<string name="confirm_password">Confirm Password</string>
<string name="connected">Connected</string>
<string name="connection_status">Connection status</string>
<string name="connectivity_type">Connectivity Type</string>
<string name="continue_text">Next</string>
<string name="cpu_usage">CPU usage: </string>
<string name="create_account">Create account</string>
<string name="create_user">Create user</string>
<string name="current_time">Current time</string>
<string name="data_cap_day_summary">Select the day of the month that the mobile data usage counter should be reset. </string>
<string name="data_cap_day_title">Mobile data usage reset day: </string>
<string name="data_cap_exceeded">Data Cap Exceeded. Do you wish to continue anyway?  </string>
<string name="data_cap_explanation">By default the Application is configured to use no more than 100 megabytes (MB) of data each month.  Any tests you initiate will also consume between 100 kilobytes (kB) for the smallest packet loss test and 40 MB for a complete suite of tests.  At any time you can change the amount of data the Application uses by increasing or reducing the \"Mobile data cap\" in the settings menu.  You should ensure that your monthly broadband usage, including the data used by the Application and Service during the Program, does not exceed the data allowance included in your mobile broadband package.  Your carrier may charge you for any data used in excess of your package\'s data allowance.</string>
<string name="data_cap_input_text">Please choose the amount of data (in MB) the Application should use each month:</string>
<string name="data_cap_summary">The maximum amount of mobile data in Mega Bytes (excluding WiFi) that this application can use in a billing month.</string>
<string name="data_cap_title">Mobile data cap: </string>
<string name="data_usage_title">Mobile data usage: </string>
<string name="data_used_preference_summary">The amount of mobile data (excluding WiFi) used by this application since the start of this billing month.</string>
<string name="data_used_preference_title">Data Used</string>
<string name="results_table_header_datetime">Date / Time</string>
<string name="day_of_month">Day of Month: </string>
<string name="device">Device</string>
<string name="disabled">Disabled</string>
<string name="dont_have_account">Need an account?</string>
<string name="download">Download</string>
<string name="downloaded">Downloaded: </string>
<string name="download_complete">Download complete</string>
<string name="download_configuration">Download configuration</string>
<string name="download_failed">The download test has failed</string>
<string name="download_mbps">Download</string>
<string name="download_success">The download test achieved %1$s Mbps</string>
<string name="download_upload_run_confirmation">This test will use some your data plan. Do you wish to continue?</string>
<string name="edge">EDGE</string>
<string name="ehrpd">eHRPD</string>
<string name="empty_code_error">Code can\'t be empty!</string>
<string name="empty_password_error">Password can\'t be empty!</string>
<string name="empty_username_error">Username can\'t be empty!</string>
<string name="enabled">Enabled</string>
<string name="enable_now">Enable Now</string>
<string name="enable_service_question">Do you want to enable mobile testing?</string>
<string name="enable_testing_summary">Enable or disable background tests</string>
<string name="enable_testing_title">Enable Testing</string>
<string name="enable_wakeup_summary">Enable or disable waking up device for tests </string>
<string name="enable_wakeup_title">Enable device wake up</string>
<string name="enter_email">Enter your email and a reset code will be sent to your email."</string>
<string name="error_on_registering">Oops... An error occurred: </string>
<string name="ethernet">ethernet</string>
<string name="evdo_0">EVDO rev 0</string>
<string name="evdo_a">EVDO rev A</string>
<string name="evdo_b">EVDO rev B</string>
<string name="executing_now">Executing now</string>
<string name="executing_test">Executing tests: </string>
<string name="failed">Failed</string>
<string name="failed_to_load_config">Failed to load config!</string>
<string name="false_string">False</string>
<string name="finished_test">Finished test: </string>
<string name="gprs">GPRS</string>
<string name="GPS">GPS</string>
<string name="graph">Graph of data</string>
<string name="graphtoggle">Graph?</string>
<string name="gsmbiterrorrate">GSM Bit Error Rate</string>
<string name="hsdpa">HSDPA</string>
<string name="hspa">HSPA</string>
<string name="hspap">HSPA+</string>
<string name="hsupa">HSUPA</string>
<string name="iden">iDen</string>
<string name="imei">IMEI</string>
<string name="imsi">IMSI</string>
<string name="init_settings_title">Data Consumption</string>
<string name="intro_text">Thank you for installing the SamKnows Performance Measurement app.\n\nThis app runs in the background, measuring your mobile provider\'s network performance whilst you are not using your device. You can view results by pressing the Test Results button.  Measurement results are transmitted back to Samknows or use in their projects with telecoms regulators worldwide.\n\nThe application has been optimised for efficient network usage, however it might be still too high for your data plan. If that\'s the case you may configure a monthly data cap in settings menu accessible via the Menu key.  </string>
<string name="is_roaming">Is Roaming</string>
<string name="jitter">Jitter</string>
<string name="jitter_ms">Jitter</string>
<string name="last_known_location_info">Last Known Location Info</string>
<string name="last_run">Test Last Run:</string>
<string name="last_run_never">Never</string>
<string name="line_break">Line Break</string>
<string name="login">Login</string>
<string name="login_to_your_account">Login to your account</string>
<string name="logs">Logs</string>
<string name="lost_password">Lost your password?</string>
<string name="paper_clip">Paper Clip</string>
<string name="password">Password</string>
<string name="password_recovery">Password Recovery</string>
<string name="register">Create Account</string>
<string name="request_password_reset">Request password reset</string>
<string name="reset_password">Reset Password</string>
<string name="stats">Stats</string>
<string name="system_info">System Info</string>
<string name="test_results">Test Results</string>
<string name="username">Email address</string>
</resources>