<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff172142"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/btn_system_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_info" />
        
        <Button
            android:id="@+id/btn_test_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_results" />

        <Button
            android:id="@+id/btn_logs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logs" />
        
        <Button
            android:id="@+id/btn_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/main_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="0" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_span="2"
                    android:gravity="center"
                    android:text="@string/available_tests"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>